# agent-llm-mm

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  not-a-sqlite-url
docs/: 2026-03-27-plan.md  current-work-2026-03-24.md  current-work-2026-03-25.md  development-macos.md  development-windows.md  document-map.md  github-publish-prep-2026-03-31.md  implementation-comparison-2026-03-24.md  llm-agent-memory-self-dialogue-2026-03-23.zh-CN.md  llm-agent-memory-self-dialogue-raw-log-2026-03-23.zh-CN.md  local-mcp-integration-2026-03-26.md  progress-tracker.md  project-overview.en.md  project-overview.ja.md  project-overview.zh-CN.md  project-status.md  provider-contract.md  release-gate.md  release-readiness.md  roadmap.md  self-revision-demo-guide-2026-04-24.md  testing-guide-2026-03-24.md
docs/releases/: 2026-03-31-initial-public-release.md  2026-04-20-self-revision-runtime-coverage-and-governance-hardening.md
docs/reports/: self-revision-demo-2026-04-24.md
examples/: agent-llm-mm.demo.example.toml  agent-llm-mm.example.toml  codex-mcp-config.toml
scripts/: agent-llm-mm.ps1  agent-llm-mm.sh  run-self-revision-demo.sh
src/: error.rs  lib.rs  main.rs
src/application/: build_self_snapshot.rs  (+5 more)
tests/: application_use_cases.rs  bootstrap.rs  dashboard_config.rs  dashboard_http.rs  dashboard_projection.rs  dashboard_recorder.rs  decision_flow.rs  demo_openai_compatible_stub.rs  domain_invariants.rs  domain_snapshot.rs  failure_modes.rs  mcp_stdio.rs  openai_compatible_model.rs  provider_config.rs  self_revision_demo_runner.rs  sqlite_store.rs
(+63 files in other folders)
